<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationLabel">Dialer</string>
    <string name="launcherActivityLabel">Phone</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call history</string>
    <string name="menu_sendTextMessage">Send SMS</string>
    <string name="recentCalls_callNumber">Call
        <xliff:g id="name">%s</xliff:g>
    </string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_removeFromRecentList">Delete from call history</string>
    <string name="recentCalls_deleteAll">Clear call history</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="recentCalls_shareVoicemail">Share voicemail</string>
    <string name="recentCalls_empty">No calls</string>
    <string name="clearCallLogConfirmation_title">Clear call history?</string>
    <string name="clearCallLogConfirmation">This will delete all calls from your history</string>
    <string name="clearCallLogProgress_title">Clearing call history\u2026</string>
    <plurals name="notification_voicemail_title">
        <item quantity="one">Voicemail</item>
        <item quantity="other">
            <xliff:g id="count">%1$d</xliff:g>
            Voicemails
        </item>
    </plurals>
    <string name="notification_action_voicemail_play">Play</string>
    <string name="notification_voicemail_callers_list"><xliff:g id="newer_callers">%1$s</xliff:g>,
        <xliff:g id="older_caller">%2$s</xliff:g>
    </string>
    <string name="notification_new_voicemail_ticker">New voicemail from
        <xliff:g id="caller">%1$s</xliff:g>
    </string>
    <string name="voicemail_playback_error">Couldn\'t play voicemail</string>
    <string name="voicemail_buffering">Buffering\u2026</string>
    <string name="voicemail_fetching_content">Loading voicemail\u2026</string>
    <string name="voicemail_fetching_timout">Couldn\'t load voicemail</string>
    <string name="call_log_voicemail_header">Calls with voicemail only</string>
    <string name="call_log_incoming_header">Incoming calls only</string>
    <string name="call_log_outgoing_header">Outgoing calls only</string>
    <string name="call_log_missed_header">Missed calls only</string>
    <string name="voicemail_status_voicemail_not_available">Voicemail updates not available</string>
    <string name="voicemail_status_messages_waiting">New voicemail waiting. Can\'t load right now.</string>
    <string name="voicemail_status_configure_voicemail">Set up your voicemail</string>
    <string name="voicemail_status_audio_not_available">Audio not available</string>
    <string name="voicemail_status_action_configure">Set up</string>
    <string name="voicemail_status_action_call_server">Call voicemail</string>
    <string name="voicemail_speed_slowest">Slowest speed</string>
    <string name="voicemail_speed_slower">Slow speed</string>
    <string name="voicemail_speed_normal">Normal speed</string>
    <string name="voicemail_speed_faster">Fast speed</string>
    <string name="voicemail_speed_fastest">Fastest speed</string>
    <string name="call_log_item_count_and_date">(<xliff:g id="count">%1$d</xliff:g>)
        <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="sms_disambig_title">Choose number</string>
    <string name="call_disambig_title">Choose number</string>
    <string name="make_primary">Remember this choice</string>
    <string name="description_search_button">search</string>
    <string name="description_dial_button">dial</string>
    <string name="description_digits_edittext">number to dial</string>
    <string name="description_playback_start_stop">Play or stop playback</string>
    <string name="description_playback_speakerphone">Switch on or off speakerphone</string>
    <string name="description_playback_seek">Seek playback position</string>
    <string name="description_rate_decrease">Decrease playback rate</string>
    <string name="description_rate_increase">Increase playback rate</string>
    <string name="action_menu_call_history_description">Call History</string>
    <string name="action_menu_overflow_description" msgid="2295659037509008453">More options</string>
    <string name="action_menu_dialpad_button">dial pad</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_show_outgoing_only">Show outgoing only</string>
    <string name="menu_show_incoming_only">Show incoming only</string>
    <string name="menu_show_missed_only">Show missed only</string>
    <string name="menu_show_voicemails_only">Show voicemails only</string>
    <string name="menu_show_all_calls">Show all calls</string>
    <string name="add_contact">Add to contacts</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_wait">Add wait</string>
    <string name="dialer_settings_label">Settings</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_allContacts">All contacts</string>
    <string name="callDetailTitle">Call details</string>
    <string name="toast_call_detail_error">Details not available</string>
    <string name="dialer_useDtmfDialpad">Use touch tone keypad</string>
    <string name="dialer_returnToInCallScreen">Return to call in progress</string>
    <string name="dialer_addAnotherCall">Add call</string>
    <string name="type_incoming">Incoming call</string>
    <string name="type_outgoing">Outgoing call</string>
    <string name="type_missed">Missed call</string>
    <string name="type_incoming_video">Incoming video call</string>
    <string name="type_outgoing_video">Outgoing video call</string>
    <string name="type_missed_video">Missed video call</string>
    <string name="type_voicemail">Voicemail</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="description_call_log_play_button">Play voicemail</string>
    <string name="description_view_contact">View contact <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call">Call <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_contact_details">Contact details for <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
    <string name="description_new_voicemail">New voicemail.</string>
    <string name="description_num_calls"><xliff:g id="numberOfCalls">%1$s</xliff:g> calls.</string>
    <string name="description_video_call">Video call.</string>
    <string name="description_send_text_message">Send SMS to <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call_log_unheard_voicemail">Unheard voicemail</string>
    <string name="description_start_voice_search">Start voice search</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="unknown">Unknown</string>
    <string name="voicemail">Voicemail</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="callDetailsDurationFormat"><xliff:g id="minutes" example="42">%s</xliff:g> min <xliff:g id="seconds" example="28">%s</xliff:g> sec</string>
    <string name="dialog_phone_call_prohibited_message" msgid="4313552620858880999">Can\'t call this number</string>
    <string name="dialog_voicemail_not_ready_message">To set up voicemail, go to Menu &gt; Settings.</string>
    <string name="dialog_voicemail_airplane_mode_message">To call voicemail, first turn off Airplane mode.</string>
    <string name="contact_list_loading">Loading\u2026</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="simContacts_emptyLoading">Loading from SIM card\u2026</string>
    <string name="simContacts_title">SIM card contacts</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="voice_search_not_available">Voice search not available</string>
    <string name="call_not_available">Cannot make a phone call because the Phone application has been disabled.</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="dialer_hint_find_contact">Enter a name or phone number</string>
    <string name="call_log_activity_title_font_family">sans-serif-light</string>
    <string name="view_full_call_history_font_family">sans-serif</string>
    <string name="recentMissed_empty">No calls</string>
    <string name="recentVoicemails_empty">No recent voicemails</string>
    <string name="show_favorites_only">Show favorites only</string>
    <string name="call_log_activity_title">History</string>
    <string name="call_log_all_title">All</string>
    <string name="call_log_missed_title">Missed</string>
    <string name="call_log_voicemail_title">Voicemail</string>
    <string name="tab_speed_dial">Speed dial</string>
    <string name="tab_recents">Recents</string>
    <string name="tab_all_contacts">Contacts</string>
    <string name="favorite_hidden">Removed from favorites</string>
    <string name="favorite_hidden_undo">Undo</string>
    <string name="search_shortcut_call_number">Call
        <xliff:g id="number">%s</xliff:g>
    </string>
    <string name="search_shortcut_add_to_contacts">Add to contacts</string>
    <string name="search_shortcut_make_video_call">Make video call</string>
    <string name="recents_footer_text">View full call history</string>
    <string name="num_missed_calls"><xliff:g id="number">%s</xliff:g> new missed calls</string>
    <string name="speed_dial_empty">Speed dial is one\u2011touch dialing for favorites and numbers you call often</string>
    <string name="all_contacts_empty">No contacts</string>
    <string name="contact_tooltip">Touch image to see all numbers or touch &amp; hold to reorder</string>
    <string name="description_dismiss">Dismiss</string>
    <string name="remove_contact">Remove</string>
    <string name="favorites_menu_all_contacts">ALL CONTACTS</string>
    <string name="call_log_action_call_back">CALL BACK</string>
    <string name="call_log_action_call">CALL</string>
    <string name="call_log_action_redial">REDIAL</string>
    <string name="call_log_action_video_call">VIDEO CALL</string>
    <string name="call_log_action_voicemail">LISTEN</string>
    <string name="call_log_action_details">DETAILS</string>
    <string name="description_incoming_missed_call">Missed call from <xliff:g id="nameOrNumber" example="John Smith">^1</xliff:g>, <xliff:g id="typeOrLocation" example="Mobile">^2</xliff:g>, <xliff:g id="timeOfCall" example="2 min ago">^3</xliff:g>, <xliff:g id="phoneAccount" example="on SIM 1">^4</xliff:g>.</string>
    <string name="description_incoming_answered_call">Answered call from <xliff:g id="nameOrNumber" example="John Smith">^1</xliff:g>, <xliff:g id="typeOrLocation" example="Mobile">^2</xliff:g>, <xliff:g id="timeOfCall" example="2 min ago">^3</xliff:g>, <xliff:g id="phoneAccount" example="on SIM 1">^4</xliff:g>.</string>
    <string name="device_base" translatable="false">BASE:</string>
    <string name="device_ver" translatable="false">VER:</string>
    <string name="device_mem" translatable="false">MEM:</string>
    <string name="device_main_lcd" translatable="false">Main LCD:</string>
    <string name="device_main_cam" translatable="false">Main Camera:</string>
    <string name="device_G_Sensor" translatable="false">G-Sensor:</string>
    <string name="device_tp_chip" translatable="false">TP chip:</string>
    <string name="device_tp_ver" translatable="false">TP hardware version:</string>
    <string name="device_barcode" translatable="false">Barcode:</string>
</resources>